@@ -1,6 +1,9 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ????? 2004, PHP 5 Release Candidate 2
+- Stopped file uploads from throwing E_WARNINGs and E_NOTICEs which can not be
+  hidden from within scripts (and a result value in the $_FILES global can be
+  used to see the real failure anyway). (Derick)
 - Reimplement zend.ze1_compatibility_mode to have better PHP 4 complicance.
   (Dmitry, Andi)
 - Changed __construct() to always take precedence over old style constructor.
